chore: changed some text

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Welcome!"
-description: "Here is the documentation for Cursor Ai Demo"
+title: "Welcome to Cursor AI Demo!"
+description: "Documentation for showcasing Cursor AI, the next-generation AI-powered IDE"
 ---
 
 <img
@@ -16,34 +16,43 @@ description: "Here is the documentation for Cursor Ai Demo"
   title=""
 />
 
+## Hello and Welcome!
+
+Welcome to the documentation for our Cursor AI demo! This documentation will guide you through the features and capabilities of Cursor, the AI-powered code editor that's revolutionizing the way developers work.
+
 ## What is Cursor?
 
-Cursor Ai is quoting [cursor](https://www.cursor.com/) "The AI Code Editor**"**
+Cursor is an AI-first code editor that brings the power of artificial intelligence directly into your development workflow. It's designed to help you write, understand, and maintain code more efficiently with features like:
+
+- AI-powered code completion and suggestions
+- Natural language to code conversion
+- Intelligent code search and navigation
+- Built-in MCP (Model Control Protocol) server for enhanced AI capabilities
+- Seamless integration with your existing development tools
 
 <CardGroup cols="2">
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
+  <Card title="Getting Started" icon="rocket" href="/getting-started">
+    Learn how to set up and start using Cursor for your development workflow
   </Card>
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
+  <Card title="Color Scheme" icon="palette" href="/color-scheme">
+    Explore the color scheme used in our demo to showcase Cursor's capabilities
   </Card>
 </CardGroup>
 
-## Make it yours
+## Why Cursor?
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Cursor represents the future of development by combining the power of AI with a modern, intuitive interface. Whether you're building a new application or maintaining existing code, Cursor helps you:
+
+- Write code faster with AI assistance
+- Understand complex codebases more easily
+- Maintain consistent code quality
+- Collaborate more effectively with your team
 
 <CardGroup cols="2">
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
+  <Card title="Features" icon="star" href="/features">
+    Discover all the powerful features Cursor has to offer
   </Card>
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
+  <Card title="Demo Setup" icon="screwdriver-wrench" href="/demo-setup">
+    Learn how to set up and run the demo environment
   </Card>
 </CardGroup>
