feat: version 1 of cursor demo docs

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,14 +5,14 @@ description: "Documentation for showcasing Cursor AI, the next-generation AI-pow
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
+  src="/green-cd-wdt.png"
+  alt="Cursor AI Logo"
 />
 
 <img
   className="hidden dark:block"
-  src="/hey-wdt.png"
-  alt="Hero Dark"
+  src="/green-cd-wdt.png"
+  alt="Cursor AI Logo"
   title=""
 />
 
@@ -31,11 +31,11 @@ Cursor is an AI-first code editor that brings the power of artificial intelligen
 - Seamless integration with your existing development tools
 
 <CardGroup cols="2">
-  <Card title="Getting Started" icon="rocket" href="/getting-started">
-    Learn how to set up and start using Cursor for your development workflow
-  </Card>
   <Card title="Color Scheme" icon="palette" href="/color-scheme">
     Explore the color scheme used in our demo to showcase Cursor's capabilities
+  </Card>
+  <Card title="Downloads & Info" icon="download" href="/downloads-and-info">
+    Get started with Cursor and learn more about its features
   </Card>
 </CardGroup>
 
