--- a/introduction.mdx
+++ b/introduction.mdx
@@ -18,24 +18,24 @@ description: "Documentation for showcasing Cursor AI, the next-generation AI-pow
 
 ## Hello and Welcome!
 
-Welcome to the documentation for our Cursor AI demo! This documentation will guide you through the features and capabilities of Cursor, the AI-powered code editor that's revolutionizing the way developers work.
+Welcome to the documentation for our Cursor AI demo! Cursor is the AI-first code editor that's revolutionizing how developers work, trusted by engineers at companies like OpenAI, Shopify, Replicate, and Vercel.
 
 ## What is Cursor?
 
-Cursor is an AI-first code editor that brings the power of artificial intelligence directly into your development workflow. It's designed to help you write, understand, and maintain code more efficiently with features like:
+Cursor is an AI-first code editor built to make you extraordinarily productive. It combines the power of artificial intelligence with a familiar, intuitive interface. Key features include:
 
-- AI-powered code completion and suggestions
-- Natural language to code conversion
-- Intelligent code search and navigation
+- Tab-based code prediction that anticipates your next edit
+- Deep codebase understanding for intelligent answers and references
+- Natural language code editing
 - Built-in MCP (Model Control Protocol) server for enhanced AI capabilities
-- Seamless integration with your existing development tools
+- Seamless integration with your existing development tools and extensions
 
 <CardGroup cols="2">
   <Card title="Color Scheme" icon="palette" href="/color-scheme">
     Explore the color scheme used in our demo to showcase Cursor's capabilities
   </Card>
-  <Card title="Downloads & Info" icon="download" href="/downloads-and-info">
-    Get started with Cursor and learn more about its features
+  <Card title="Features" icon="star" href="/features">
+    Discover all the powerful features Cursor has to offer
   </Card>
 </CardGroup>
 
@@ -43,14 +43,15 @@ Cursor is an AI-first code editor that brings the power of artificial intelligen
 
 Cursor represents the future of development by combining the power of AI with a modern, intuitive interface. Whether you're building a new application or maintaining existing code, Cursor helps you:
 
-- Write code faster with AI assistance
-- Understand complex codebases more easily
-- Maintain consistent code quality
-- Collaborate more effectively with your team
+- Code at the speed of thought with AI-powered predictions
+- Understand and navigate complex codebases effortlessly
+- Write code using natural language instructions
+- Maintain consistent code quality with intelligent suggestions
+- Collaborate effectively with your team
 
 <CardGroup cols="2">
-  <Card title="Features" icon="star" href="/features">
-    Discover all the powerful features Cursor has to offer
+  <Card title="Download" icon="download" href="/download">
+    Get started with Cursor on your platform
   </Card>
   <Card title="Demo Setup" icon="screwdriver-wrench" href="/demo-setup">
     Learn how to set up and run the demo environment
