chore: text changes and personal touch

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,13 +5,13 @@ description: "Documentation for showcasing Cursor AI, the next-generation AI-pow
 
 <img
   className="block dark:hidden"
-  src="/green-cd-wdt.png"
+  src="/hey-wdt.png"
   alt="Cursor AI Logo"
 />
 
 <img
   className="hidden dark:block"
-  src="/green-cd-wdt.png"
+  src="/hey-wdt.png"
   alt="Cursor AI Logo"
   title=""
 />
@@ -19,6 +19,10 @@ description: "Documentation for showcasing Cursor AI, the next-generation AI-pow
 ## Hello and Welcome!
 
 Welcome to the documentation for our Cursor AI demo! Cursor is the AI-first code editor that's revolutionizing how developers work, trusted by engineers at companies like OpenAI, Shopify, Replicate, and Vercel.
+
+## A Message from Pelle
+
+> "I'm excited to showcase how Cursor can transform your development workflow. This demo will highlight the powerful AI capabilities that make Cursor stand out from other code editors. Whether you're a seasoned developer or just starting out, Cursor's intuitive interface and intelligent features will help you code faster and more efficiently. Let's explore the future of coding together!"
 
 ## What is Cursor?
 
@@ -52,8 +56,5 @@ Cursor represents the future of development by combining the power of AI with a 
 <CardGroup cols="2">
   <Card title="Download" icon="download" href="/download">
     Get started with Cursor on your platform
-  </Card>
-  <Card title="Demo Setup" icon="screwdriver-wrench" href="/demo-setup">
-    Learn how to set up and run the demo environment
   </Card>
 </CardGroup>
